welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:14: error: Unit does not take parameters
faireMotif();
          ^